[package]
name = "opt8"
version = "0.1.0"
authors = ["Mateusz Naściszewski <matin1111@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "concrete-interpreter"
path = "src/concrete-interpreter.rs"

[dependencies]
minifb = "0.12.0"
